@@ -31,7 +31,10 @@ Changes in openair 0.8-0 [2012-05-30]
 *	Better base maps with trajectory plotting (filled and alpha
 	transparency)
 *	Fix windRose bug where all data are missing
-*	Use higher resolution mapdata not maps package for trajectory plots
+*	Use higher resolution mapdata not maps package for trajectory
+	plots
+*	Allow method = "hexbin" in trajLevel for hexagonal binning
+	of trajectory frequencies
 
 
 Changes in openair 0.7-0 [2012-05-30]
